@@ -1,3 +1,7 @@
+* Fri Nov 27 22:00:00 CEST 1998 
+
+Added "To Desktop" menu.
+
 * Fri Nov 27 7:20:00 CEST 1998 
 
 Implemented kbgndwm's ability to read wallpapers from a directory
